[tool.poetry]
name = "langgraph-api"
version = "0.1.0"
description = ""
authors = ["rvora@ekline.io"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.0"
jupyter = "^1.0.0"
langgraph-cli = "^0.1.4"
langgraph-sdk = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
